2012-07-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Bump API version to 25

2012-07-06 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Cleanup and use new header generation for queryIdentify.

	* DBCVSWriter.m
	Rescurse and append header names correctly.

2012-07-06 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.h
	* DBCVSWriter.m
	* DBSoapCSV.m
	Make parsing of objects recursive and support . notation.
	Reconstruct field names. Updated queryAll only, the rest should be
	backward comaptible

2012-07-05 Riccardo Mottola <rm@gnu.org>

	* DBLogger.m
	Change colors and set fixed font size. NSLog() only unexpected stuff.

	* AppController.m
	* DBSoap.m
	Clean up logging and use new logger class.

2012-07-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Logger preferences.

	* DBLogger.m
	Log with attributed string.

	* DBSoap.m
	Adapt to new logger method.

	* Resources/DataBasin.gorm
	Add log menu item

2012-07-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Correctly save the log level preference. Set logger level.

	* DBSoap.m
	Log login messages to logger and not stdout.

	* Resources/DataBasin.gorm
	Add log level preference.

2012-06-30 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* DBLogger.h
	* DBLogger.m
	Logger level setters.

2012-06-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Query Identify needs to respect QueryMore and the query locator

2012-06-28 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	Interpret NSNumber values and use unquoted string value.